# workshop_estruturando_projeto_dados

./: .pre-commit-config.yaml  404.html  README.md  index.html  objects.inv  pyproject.toml
app/: data_extractor.py  extract.py  generate_data.py  load.py  pipeline.py  transform.py
app/classes/: data_extractor.py
app/decorators/: decorators.py  log_decorator.py
app/funcs/: extract.py  load.py  transform.py
app/src/: pipeline.py
classes/: data_extractor.py
decorators/: decorators.py
documentation/: mkdocs.yml
documentation/docs/: extract.md  generate_data.md  index.md  transform.md
documentation/site/: 404.html  index.html
documentation/site/extract/: index.html
documentation/site/generate_data/: index.html
documentation/site/search/: search_index.json
documentation/site/transform/: index.html
extract/: index.html
funcs/: extract.py  generate_data.py  load.py  transform.py
generate_data/: index.html
github/: ci.yml
search/: search_index.json
tests/: test_extract.py  test_load.py  test_transform.py
transform/: index.html
